# Cairn

./: README.md  dispatch.local.example.yaml
cairn/: pyproject.toml
cairn/src/cairn/dispatcher/: config.py
cairn/src/cairn/dispatcher/runtime/: backend.py  cancellation.py  heartbeat.py  local_backend.py  local_process.py  process.py
cairn/src/cairn/dispatcher/scheduler/: loop.py
cairn/src/cairn/dispatcher/tasks/: bootstrap.py  common.py  explore.py  reason.py
cairn/src/cairn/dispatcher/workers/: base.py  registry.py
cairn/src/cairn/dispatcher/workers/adapters/: claudecode.py  codex.py  mock.py  pi.py
cairn/tests/: conftest.py  test_config_and_adapters.py  test_container_archives.py  test_contracts_and_drivers.py  test_local_execution.py  test_mock_end_to_end.py  test_protocol_and_startup.py  test_runtime_logic.py  test_scheduler_logic.py  test_server_api.py  test_worker_tasks.py
docs/specs/: dispatcher-design.md
